# demo

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/api/: db.py  main.py  model.py
backend/devcontainer/: devcontainer.json
db/: Dockerfile
db/conf.d/: my.cnf
db/initdb.d/: testdata.sql
frontend/: Dockerfile  package-lock.json  package.json
