[tool.poetry]
name = "kintai-app-backend"
version = "0.1.0"
description = "Kintai management backend service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^1.4.22"
pydantic = "^1.8.2"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"